상품등록해야함

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,11 +1,18 @@
 error.user.username=\uD544\uC218\uC785\uB825\uC785\uB2C8\uB2E4
 
-role.label=\uD68C\uC6D0\uB4F1\uAE09
-role.USER=\uC77C\uBC18
-role.STORE=\uC18C\uB9E4\uC810
-role.RETAILER=\uC720\uD1B5\uC778
-role.WHOLESALER=\uB3C4\uB9E4\uC720\uD1B5\uC778
-role.PARTNER=\uD30C\uD2B8\uB108
-role.AGENT=\uB300\uB9AC\uC810
-role.ADMIN=\uAD00\uB9AC\uC790
+ROLE.label=\uD68C\uC6D0\uB4F1\uAE09
+ROLE.USER=\uC77C\uBC18
+ROLE.STORE=\uC18C\uB9E4\uC810
+ROLE.RETAILER=\uC720\uD1B5\uC778
+ROLE.WHOLESALER=\uB3C4\uB9E4\uC720\uD1B5\uC778
+ROLE.PARTNER=\uD30C\uD2B8\uB108
+ROLE.AGENT=\uB300\uB9AC\uC810
+ROLE.ADMIN=\uAD00\uB9AC\uC790
+
+CODE.TRUE=0
+CODE.FALSE=1
+CODE.ACTIVE=11
+CODE.DELETE=99
+CODE.START=21
+CODE.END=29
 
