1차 업로드 상품 이미지 수정해야함

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,3 +16,9 @@ CODE.DELETE=99
 CODE.START=21
 CODE.END=29
 
+SIZE1=\uC655\uB780
+SIZE2=\uD2B9\uB780
+SIZE3=\uB300\uB780
+SIZE4=\uC911\uB780
+SIZE5=\uC18C\uB780
+
